--- a/mentor_link/app_mentorlink/templates/base.html
+++ b/mentor_link/app_mentorlink/templates/base.html
@@ -389,7 +389,7 @@
                             <input 
                                 type="text" 
                                 name="q" 
-                                placeholder="Rechercher un mentor, un métier..." 
+                                placeholder="Rechercher une annonce" 
                                 class="search-input"
                                 value="{{ request.GET.q }}"
                                 onkeypress="if(event.key==='Enter') this.form.submit()"
@@ -448,7 +448,7 @@
                         <input 
                             type="text" 
                             name="q" 
-                            placeholder="Rechercher un mentor..." 
+                            placeholder="Rechercher une annonce" 
                             class="search-input"
                             value="{{ request.GET.q }}"
                             onkeypress="if(event.key==='Enter') this.form.submit()"
@@ -551,7 +551,7 @@
                                     <input 
                                         type="text" 
                                         name="q" 
-                                        placeholder="Rechercher un mentor, un métier, une compétence..." 
+                                        placeholder="Rechercher une annonce" 
                                         class="search-input text-gray-900 text-lg py-4"
                                         value="{{ request.GET.q }}"
                                         onkeypress="if(event.key==='Enter') this.form.submit()"
