--- a/mentor_link/app_mentorlink/templates/home.html
+++ b/mentor_link/app_mentorlink/templates/home.html
@@ -119,7 +119,7 @@
                                 <!-- Actions -->
                                 <div class="flex flex-col space-y-2">
                                     <a href="{% url 'annonce_detail' annonce.id %}" class="bg-orange-600 text-white px-4 py-2 rounded-lg font-medium hover:bg-orange-700 transition-colors duration-200">
-                                        Voir le profil
+                                        Voir l'annonce
                                     </a>
                                     {% if user.is_authenticated and user != annonce.id_personnes %}
                                         <a href="{% url 'start_private_chat' annonce.id %}" class="bg-white text-orange-600 border border-orange-600 px-4 py-2 rounded-lg font-medium hover:bg-orange-50 transition-colors duration-200">
