ajout templates login signup et profil et bouton déconnexion fonctionnel

--- a/mentor_link/app_mentorlink/templates/base.html
+++ b/mentor_link/app_mentorlink/templates/base.html
@@ -413,8 +413,7 @@
                             <span class="badge" id="unread-badge" style="display: none;">0</span>
                         </a>
                         <a href="{% url 'profil' %}" class="nav-link">Profil</a>
-                        <a href="{% url 'logout' %}" class="btn btn-secondary">
-                        <form action="{% url 'logout' %}" method="post" style="text-decoration: none; color: inherit;">
+                        <form action="{% url 'logout' %}" method="post" class="nav-link">
                             {% csrf_token %}
                             <button type="submit">Déconnexion</button>
                         </form>
